--- a/src/components/sections/About.module.css
+++ b/src/components/sections/About.module.css
@@ -11,7 +11,7 @@
     width: 40%;
     display: grid;
     place-items: center;
-
+    margin-left: 50px;
 }
 
 .image_container img{
@@ -29,4 +29,24 @@
 
 .text_container{
     width: 60%;
+    color: var(--secondary-color);
+    margin-right: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.title{
+    font-size: 35px;
+}
+
+.text{
+    font-weight: 300;
+    font-size: 30px;
+}
+
+.container_marker{
+    display: flex;
+    flex-direction: column;
+    gap:15px;
 }
