--- a/src/components/layouts/Navbar.module.css
+++ b/src/components/layouts/Navbar.module.css
@@ -2,13 +2,13 @@
     width: 100%;
     display: flex;
     position:fixed;
+    backdrop-filter: blur(5px);
 }
 
 .nav_container{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: var(--nav-footer); 
     width: 100%;
     height: 80px;
     margin-left: 50px;
@@ -17,12 +17,16 @@
     border-radius: 25px;
     padding-left: 20px;
     padding-right: 20px;
+
 }
 
-.logo{
-    width: 55px;
-    height: 60px;
+.nav_container h1{
+    font: "Outfit", sans-serif;
+    font-size: 24px;
+    color: var(--secondary-color);
+
 }
+
 
 .lista{
     display: flex;
@@ -33,9 +37,9 @@
     display: flex;
     flex-direction: row;
     font-family: Raleway;
-    font-size: 35px;
+    font-size: 16px;
     list-style: none;
-    color: var(--items);
+    color: #4c4f53;
     font-weight: bold;
 }
 
