--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-    font-family: "Raleway", sans-serif;
+    font-family: "Outfit", sans-serif;
 }
 
 html,
@@ -13,7 +13,7 @@ body,
 }
 
 :root{
-  --backgroud: #262626;
+  --backgroud: #00030A;
   --main-color: #578BF2;
   --main-color-back: #578BF230;
   --items: #99B6F2;
