--- a/src/components/layouts/Navbar.module.css
+++ b/src/components/layouts/Navbar.module.css
@@ -15,7 +15,7 @@
     margin-right: 50px;
     margin-top: 25px;
     border-radius: 25px;
-    padding-left: 20px;
+    padding-left: 20px; 
     padding-right: 20px;
 
 }
@@ -36,14 +36,14 @@
 .item{
     display: flex;
     flex-direction: row;
-    font-family: Raleway;
     font-size: 16px;
     list-style: none;
     color: #4c4f53;
-    font-weight: bold;
 }
 
 .item:hover{ 
     color: var(--main-color);
     cursor: pointer;
+    font-weight: bold;
+    display: block;
 }
