--- a/src/components/sections/About.module.css
+++ b/src/components/sections/About.module.css
@@ -20,7 +20,7 @@
 }
 
 .cicle{
-    width: 415px;
+    width: 415px; 
     height: 415px;
     background-color: var(--main-color);
     border-radius: 100%;
@@ -33,16 +33,18 @@
     margin-right: 50px;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 20px;
 }
 
 .title{
-    font-size: 35px;
+    font-size: 48px;
+    font-weight: 400;
+    color: #FFF;
 }
 
 .text{
-    font-weight: 300;
-    font-size: 30px;
+    font-size: 20px;
+    color: #FFFFFF50;
 }
 
 .container_marker{
