--- a/src/components/sections/Skills.module.css
+++ b/src/components/sections/Skills.module.css
@@ -2,8 +2,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     width: 100%;
-    gap:45px;
+    height: 100vh;
+    gap:40px;
 }
 
 .title{
@@ -13,6 +15,23 @@
 }
 
 .title h1{
-    font-size: 60px;
-    color: var(--secondary-color)
+    font-size: 48px;
+    color: #FFF
+} 
+
+.techs_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+}
+
+.techs_container h2{
+    font-size: 20px;
+    font-weight: 300;
+}
+
+.techs{
+    display: flex;
+    gap: 40px;
 }
