--- a/src/components/layouts/Navbar.module.css
+++ b/src/components/layouts/Navbar.module.css
@@ -17,7 +17,7 @@
     border-radius: 25px;
     padding-left: 20px; 
     padding-right: 20px;
-
+ 
 }
 
 .nav_container h1{
@@ -38,7 +38,7 @@
     flex-direction: row;
     font-size: 16px;
     list-style: none;
-    color: #4c4f53;
+    color: var(--secondary-color);
 }
 
 .item:hover{ 
