--- a/src/components/layouts/Footer.module.css
+++ b/src/components/layouts/Footer.module.css
@@ -1,16 +1,16 @@
- .footer{
+ footer{
     width:100%;
-    display: flex;
+    padding-left: 64px;
+    padding-right: 64px;
  }
 
  .footer_container{
     display: flex;
     align-items: center;
-    justify-content: center;
-    background-color: var(--nav-footer); 
+    border-top: solid 1px #1A1A1A;
     width: 100%;
     height: 100px;
- }
+ } 
 
  .footer_container span{
     color: var(--secondary-color)
