--- a/src/components/sections/Skills.module.css
+++ b/src/components/sections/Skills.module.css
@@ -12,12 +12,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 20px;
 }
 
 .title h1{
     font-size: 48px;
     color: #FFF
-} 
+}  
 
 .techs_container{
     display: flex;
