--- a/src/components/sections/Home.module.css
+++ b/src/components/sections/Home.module.css
@@ -92,3 +92,14 @@
     box-shadow: 1px 1px 10px var(--main-color);
     cursor: pointer;
 }
+
+.light{
+    width: 100%;
+    height: 20px;
+    background-color: #578BF2;
+    position: absolute;
+    bottom: 0;
+    border-radius: 50%;
+    box-shadow: 0px 0px 1100px 30px #578BF2;
+    filter: blur(100px);
+}
