--- a/src/components/layouts/Navbar.module.css
+++ b/src/components/layouts/Navbar.module.css
@@ -1,50 +1,100 @@
-.navbar{
-    width: 100%;
-    display: flex;
-    position:fixed;
-    backdrop-filter: blur(5px);
-    z-index: 2;
-}
-
-.nav_container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    height: 80px;
-    margin-left: 50px;
-    margin-right: 50px;
-    margin-top: 25px;
-    border-radius: 25px;
-    padding-left: 20px; 
-    padding-right: 20px;
- 
-}
-
-.nav_container h1{
-    font: "Outfit", sans-serif;
-    font-size: 24px;
-    color: var(--secondary-color);
-
-}
-
-
-.lista{
-    display: flex;
-    gap: 30px;
-}
-
-.item{
-    display: flex;
-    flex-direction: row;
-    font-size: 16px;
-    list-style: none;
-    color: var(--secondary-color);
+.navbar {
+  width: 100%;
+  position:fixed;
+  backdrop-filter: blur(5px);
+  z-index: 2; 
+  padding: 25px 64px 0px 64px;
 }
  
-.item:hover{ 
-    color: var(--main-color);
-    cursor: pointer;
-    font-weight: bold;
+.nav_container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
+  border-radius: 25px;
+}
 
+.nav_container h1{ 
+    font: "Outfit", sans-serif; 
+    font-size: 24px; 
+    color: var(--secondary-color); 
+}
+
+.lista {
+  display: flex;
+  gap: 30px;
+}
+
+.item {
+  list-style: none;
+  font-size: 16px;
+  color: var(--secondary-color);
+}
+
+.item:hover {
+  color: var(--main-color);
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.hamburger {
+  display: none;
+  flex-direction: column;
+  gap: 6px;
+  cursor: pointer;
+}
+
+.hamburger span {
+  width: 25px;
+  height: 3px;
+  background: var(--secondary-color);
+  transition: 0.3s;
+}
+
+/* Animação do X */
+.active span:nth-child(1) {
+  transform: rotate(45deg) translate(6px, 5px);
+}
+
+.active span:nth-child(2) {
+  opacity: 0;
+}
+
+.active span:nth-child(3) {
+  
+  transform: rotate(-45deg) translate(8px, -6px);
+}
+
+@media (max-width: 1024px) { 
+  .hamburger {
+    display: flex;
+  }
+
+  .lista {
+    width: 200px;
+    position: absolute;
+    top: 110px;
+    right: 20px;
+    background: rgba(0, 0, 0, 0.85);
+    flex-direction: column;
+    gap: 20px;
+    padding: 25px;
+    border-radius: 20px;
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(-10px);
+    transition: 0.3s ease;
+  }
+
+  .open {
+    opacity: 1;
+    pointer-events: all;
+    transform: translateY(0);
+  }
+}
+
+@media (max-width: 640px){
+    .navbar{
+      padding: 0px 40px 0px 40px;
+    }
 }
