--- a/src/components/sections/Contact.module.css
+++ b/src/components/sections/Contact.module.css
@@ -3,8 +3,7 @@
     height: 80vh;
     display: flex;
     flex-direction: column;
-    padding-left: 64px;
-    padding-right: 64px;
+    padding: 0px 64px 0px 64px;
     gap:100px;
     justify-content: center;
 }
@@ -19,7 +18,7 @@
     font-weight: 500;
     color: var(--secondary-color);
 }
-
+ 
 .names{ 
     display: flex;
     align-items: center;
@@ -28,7 +27,6 @@
     transform: scale(1);
     transition: transform 0.1s;
 }
-
 
  
 .names svg{
@@ -60,4 +58,20 @@
     width: 24px;
     height: 24px;
     stroke: var(--secondary-color);
+}
+
+@media (max-width:640px){
+    .contact{
+        padding: 0px 40px 0px 40px;
+    }
+
+    .contact h1{
+        width: 100%;
+        font-size: 40px;
+    }
+
+    .contact_container{
+        width: 100%;
+        flex-wrap: wrap;
+    }
 }
