--- a/src/components/sections/Home.module.css
+++ b/src/components/sections/Home.module.css
@@ -91,7 +91,7 @@
 .button:hover{
     box-shadow: 1px 1px 10px var(--main-color);
     cursor: pointer;
-}
+} 
 
 .light{
     width: 100%;
@@ -102,4 +102,34 @@
     border-radius: 50%;
     box-shadow: 0px 0px 1100px 30px #578BF2;
     filter: blur(100px);
+}
+
+@media (max-width: 640px){
+    .home{
+        padding: 0px 40px 0px 40px;
+    }
+
+    .home h1{
+        font-size: 40px;
+        font-weight: bold;
+    }
+
+    .home h2{
+        font-size: 16px;
+        font-weight: 300;
+    }
+
+    .icon_container hr{
+        width: 65px;
+    }
+
+    .button{
+        width: 126px;
+        height: 38px;
+        font-size: 14px;
+    }
+
+    .button img{
+        width: 22px;
+    }
 }
