--- a/src/components/sections/Skills.module.css
+++ b/src/components/sections/Skills.module.css
@@ -6,6 +6,7 @@
     width: 100%;
     height: 100vh;
     gap:40px;
+    padding: 0px 64px 0px 64px;
 }
 
 .title{
@@ -24,7 +25,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 40px;
+    
 }
 
 .techs_container h2{
@@ -33,6 +36,43 @@
 }
 
 .techs{
-    display: flex;
+    width: 100%;
+    display: flex; 
+    align-items: center;
+    justify-content: center;
     gap: 40px;
+    flex-wrap: wrap;
+}
+
+@media (max-width:1024px){
+    .title h1{
+        font-size: 40px;
+    }  
+
+    .techs_container h2{
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 640px){
+    .skills{
+        padding: 0px 40px 0px 40px;
+    }
+
+    .title h1{
+        font-size: 30px;
+        text-align: center;
+    }
+
+    .techs_container h2{
+        font-size: 14px;
+    }
+
+    .skills{ 
+        height: fit-content;
+    }
+
+    .techs{
+        gap: 30px;
+    }
 }
