--- a/src/components/ui/Card.module.css
+++ b/src/components/ui/Card.module.css
@@ -19,4 +19,28 @@
 
 .card:hover .icon{
     fill: var(--secondary-color);
+} 
+
+@media (max-width: 1024px){
+    .card{
+        width: 110px;
+        height: 110px;
+    }
+
+    .icon{
+        width: 40px;
+        height: 40px;
+    }
+}
+
+@media (max-width: 640px){
+    .card{
+        width: 90px;
+        height: 90px;
+    }
+
+    .icon{
+        width: 40px;
+        height: 40px;
+    }
 }
