--- a/src/components/sections/Contact.module.css
+++ b/src/components/sections/Contact.module.css
@@ -1,6 +1,7 @@
 .contact{
     width: 100%;
-    height: 80vh;
+    min-height: 80vh;
+    min-height: 80dvh;
     display: flex;
     flex-direction: column;
     padding: 0px 64px 0px 64px;
@@ -13,7 +14,7 @@
 }
 
 .contact h1{
-    width: 1000px;
+    width: 1000px; 
     font-size: 64px;
     font-weight: 500;
     color: var(--secondary-color);
@@ -67,11 +68,27 @@
 
     .contact h1{
         width: 100%;
-        font-size: 40px;
+        font-size: 36px;
     }
 
     .contact_container{
         width: 100%;
         flex-wrap: wrap;
     }
+
+    .icon{
+        width: 20px;
+        height: 20px;
+    }
+
+    .icon_2{
+        width: 20px;
+        height: 20px;
+    }
+
+    .names{
+        font-size: 14px;
+    }
+
+
 }
