--- a/src/components/sections/Contact.module.css
+++ b/src/components/sections/Contact.module.css
@@ -61,6 +61,13 @@
     stroke: var(--secondary-color);
 }
 
+@media (max-width: 1024px){
+    .contact h1{
+        width: 100%;
+        font-size: 50px;
+    }
+}
+
 @media (max-width:640px){
     .contact{
         padding: 0px 40px 0px 40px;
